--- a/applications/robot-gitee/access/configmap.yaml
+++ b/applications/robot-gitee/access/configmap.yaml
@@ -232,6 +232,9 @@ data:
 
         mindspore/recommender:
         - robot-gitee-mindspore-review-trigger
+          
+        mindspore/models:
+        - robot-gitee-mindspore-review-trigger
 
         ms-incubator:
         - robot-gitee-mindspore-cla
