--- a/applications/robot-gitee-ascend/tide/configmap.yaml
+++ b/applications/robot-gitee-ascend/tide/configmap.yaml
@@ -202,6 +202,7 @@ data:
       - ascend/pytorch
       - ascend/op-plugin
       - ascend/ModelZoo-PyTorch
+      - ascend/modelzoo-GPL
       - ascend/ads
       merge_method: squash
       labels:
