--- a/applications/robot-github-openeuler/repo-watcher-src-openeuler/configmap.yaml
+++ b/applications/robot-github-openeuler/repo-watcher-src-openeuler/configmap.yaml
@@ -6,20 +6,24 @@ data:
   config.yaml: |
     config:
       watching_files:
-        org: src-openeuler
+        org: openeuler
         repo: community
         branch: master
         repo_org: src-openeuler
         sig_file_path: sig/sigs.yaml
         sig_dir: sig
       concurrent_size: 2000
-      enable_creating_obs_meta_project: true
+      enable_creating_obs_meta_project: false
       interval: 3
       obs_meta_project:
         obs_repo:
-          org: src-openeuler
+          org: openeuler
           repo: release-management
           branch: master
         project_dir: master/openEuler-Factory
         project_file_name: pckg-mgmt.yaml
-
+      om_api:
+        app_id: "${APP_ID}"
+        app_secret: "${APP_SECRET}"
+        endpoint_get_token: https://omapi.osinfra.cn/oneid/manager/token
+        endpoint_get_user: https://omapi.osinfra.cn/oneid/manager/getuserinfo
