--- a/applications/xihe-docs/ingress.yaml
+++ b/applications/xihe-docs/ingress.yaml
@@ -3,15 +3,8 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/server-snippet: |
-      rewrite ^/$                           /zh/introduction/ redirect;
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      add_header X-Content-Type-Options "nosniff";
-      add_header X-XSS-Protection "1; mode=block";
-      add_header X-Frame-Options "DENY";
-      add_header Content-Security-Policy "script-src 'self' *.baidu.com 'unsafe-inline' 'unsafe-eval'; object-src 'none'; frame-src *.mindspore.cn";
-      add_header Cache-Control "no-cache";
-      add_header Pragma "no-cache";
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/permanent-redirect: https://xihe-docs-mindspore.osinfra.cn$request_uri
   name: mindspore-xihe-docs-ingress
   namespace: xihe-docs
 spec:
@@ -21,12 +14,6 @@ spec:
       secretName: mindspore-xihe-docs-tls
   rules:
     - host: xihe-docs.mindspore.cn
-      http:
-        paths:
-          - backend:
-              serviceName: mindspore-xihe-docs-service
-              servicePort: 80
-            path: /
 
 ---
 apiVersion: extensions/v1beta1
