--- a/applications/xihe-docs/secret.yaml
+++ b/applications/xihe-docs/secret.yaml
@@ -8,11 +8,30 @@ spec:
   name: mindspore-xihe-docs-tls
   keysMap:
     ca.crt:
-      path: secrets/data/mindspore/xihe-docs
+      path: secrets/data/mindspore/mindspore-cn-tls
+      key: ca.cert
+    tls.crt:
+      path: secrets/data/mindspore/mindspore-cn-tls
+      key: ca.cert
+    tls.key:
+      path: secrets/data/mindspore/mindspore-cn-tls
+      key: ca.key
+
+---
+apiVersion: secrets-manager.tuenti.io/v1alpha1
+kind: SecretDefinition
+metadata:
+  name: mindspore-xihe-docs-osinfra-tls
+  namespace: xihe-docs
+spec:
+  name: mindspore-xihe-docs-osinfra-tls
+  keysMap:
+    ca.crt:
+      path: secrets/data/infra-common/osinfra-cn
       key: server.crt
     tls.crt:
-      path: secrets/data/mindspore/xihe-docs
+      path: secrets/data/infra-common/osinfra-cn
       key: server.crt
     tls.key:
-      path: secrets/data/mindspore/xihe-docs
+      path: secrets/data/infra-common/osinfra-cn
       key: server.key
