--- a/applications/robot-github-openeuler/secrets.yaml
+++ b/applications/robot-github-openeuler/secrets.yaml
@@ -8,3 +8,9 @@ spec:
     robot-token:
       path: secrets/data/mindspore/robot-github
       key: robot-openeuler-token
+    app_id:
+      path: secrets/data/mindspore/robot-github
+      key: app_id
+    app_secret:
+      path: secrets/data/mindspore/robot-github
+      key: app_secret
