--- a/applications/xihe-test-v2/xihe-statistics/xihe-statistics-ingress.yaml
+++ b/applications/xihe-test-v2/xihe-statistics/xihe-statistics-ingress.yaml
@@ -2,9 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-issuer
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/whitelist-source-range: 159.138.58.212
   name: xihe-statistics-ingress
   namespace: xihe-test-v2
 spec:
@@ -19,4 +17,4 @@ spec:
   tls:
   - hosts:
     - xihe-statistics.test.osinfra.cn
-    secretName: xihe-statistics-tls
+    secretName: xihe-test-osinfra-cn-tls
