add repo mindseed

--- a/applications/robot-gitee-ascend/approve/configmap.yaml
+++ b/applications/robot-gitee-ascend/approve/configmap.yaml
@@ -12,6 +12,7 @@ data:
       - ascend/AscendSpeed
       - ascend/ModelLink
       - ascend/ads
+      - ascend/MindSeed
       require_self_approval: true      
 
     - repos:
