--- a/applications/robot-gitee-ascend/review-trigger-new/configmap.yaml
+++ b/applications/robot-gitee-ascend/review-trigger-new/configmap.yaml
@@ -19,6 +19,7 @@ data:
       
     - repos:
         - ascend/AscendSpeed
+        - ascend/MindSeed
       need_welcome: true
       cla_label: "ascend-cla/yes"
       review:
