--- a/applications/robot-gitee-ascend/review-trigger-new/configmap.yaml
+++ b/applications/robot-gitee-ascend/review-trigger-new/configmap.yaml
@@ -19,7 +19,6 @@ data:
       
     - repos:
         - ascend/AscendSpeed
-        - ascend/MindSeed
       need_welcome: true
       cla_label: "ascend-cla/yes"
       review:
@@ -34,4 +33,13 @@ data:
       review:
         number_of_approvers: 1
         total_number_of_approvers: 1
+        total_number_of_reviewers: 3
+        
+    - repos:
+        - ascend/MindSeed
+      need_welcome: true
+      cla_label: "ascend-cla/yes"
+      review:
+        number_of_approvers: 1
+        total_number_of_approvers: 2
         total_number_of_reviewers: 3
