--- a/applications/robot-gitee-mindspore/tide/kustomization.yaml
+++ b/applications/robot-gitee-mindspore/tide/kustomization.yaml
@@ -16,4 +16,4 @@ nameSuffix: -tide
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee-tide
-  newTag: mindspore-423abc
+  newTag: mindspore-c7f5a6
