update xihe website nginx

--- a/applications/xihe-new/xihe-website/kustomization.yaml
+++ b/applications/xihe-new/xihe-website/kustomization.yaml
@@ -3,8 +3,7 @@ kind: Kustomization
 resources:
 - deployment.yaml
 - service.yaml
-- configmap.yaml
-- ingress.yaml
+- sa.yaml
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-website-test
   newTag: c84d2760fde731bfa8f247075303252d9417435d
