--- a/applications/robot-gitee/sync-repository-trigger/configmap.yaml
+++ b/applications/robot-gitee/sync-repository-trigger/configmap.yaml
@@ -18,6 +18,9 @@ data:
         - org: euler-ttttt
           repos:
             - babel
+        - org: modelx
+          repos:
+            - MindSeed
       file_names:
         - OWNERS
 
