--- a/applications/robot-gitee-ascend/tide/configmap.yaml
+++ b/applications/robot-gitee-ascend/tide/configmap.yaml
@@ -205,7 +205,6 @@ data:
       - ascend/ModelZoo-PyTorch
       - ascend/modelzoo-GPL
       - ascend/ads
-      - ascend/MindSeed
       merge_method: squash
       labels:
       - label: lgtm
@@ -227,3 +226,17 @@ data:
         tips_if_missing: "Please wait for the CI test to be completed."
         person: atlasaccount
         tips_if_added_by_others: "You can't add ci-pipeline-passed label manually. Please remove it and wait for the CI test to be completed."
+
+    - repos:
+      - modelx/MindSeed
+      merge_method: squash
+      labels:
+      - label: lgtm
+        tips_if_missing: "Please wait for reviewers to review the code."
+        person: I-am-a-robot
+        tips_if_added_by_others: "You can't add lgtm label manually. Please remove it and wait for reviewers to review your codes."
+
+      - label: approved
+        tips_if_missing: "Please wait for approvers to review the code."
+        person: I-am-a-robot
+        tips_if_added_by_others: "You can't add approved label manually. Please remove it and wait for approvers to review your codes."
