--- a/applications/robot-github-openeuler/welcome/configmap.yaml
+++ b/applications/robot-github-openeuler/welcome/configmap.yaml
@@ -7,7 +7,7 @@ data:
     config_items:
     - repos:
       - src-openeuler
-      community_name: src-openeuler
+      community_name: openeuler
       community_repo: community
       branch: master
       command_link: https://gitee.com/openeuler/community/blob/master/en/sig-infrastructure/command.md
