update robot-github-openeuler token

--- a/applications/robot-github-openeuler/secrets.yaml
+++ b/applications/robot-github-openeuler/secrets.yaml
@@ -14,3 +14,6 @@ spec:
     app_secret:
       path: secrets/data/mindspore/robot-github
       key: app_secret
+    robot-token-gitee:
+      path: secrets/data/mindspore/robot-gitee
+      key: robot-token
