--- a/applications/robot-github-openeuler/bot-base/deployment.yaml
+++ b/applications/robot-github-openeuler/bot-base/deployment.yaml
@@ -12,6 +12,7 @@ spec:
         args:
         - --port=8888
         - --github-token-path=/app/conf/robot-github/robot_token
+        - --gitee-token-path=/app/conf/robot-gitee/robot_token_gitee
         - --config-file=/app/conf/robot-github/app_config/config.yaml
         image: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-github:latest
         imagePullPolicy: IfNotPresent
@@ -22,6 +23,9 @@ spec:
         volumeMounts:
         - mountPath: /app/conf/robot-github/robot_token
           subPath: robot-token
+          name: secret-volume
+        - mountPath: /app/conf/robot-gitee/robot_token_gitee
+          subPath: robot-token-gitee
           name: secret-volume
         - mountPath: /app/conf/robot-github/app_config/
           name: app-config
