add cla config of mindseed

--- a/applications/robot-gitee-ascend/tide/configmap.yaml
+++ b/applications/robot-gitee-ascend/tide/configmap.yaml
@@ -241,6 +241,11 @@ data:
         person: I-am-a-robot
         tips_if_added_by_others: "You can't add approved label manually. Please remove it and wait for approvers to review your codes."
         
+      - label: modelfoundry-cla/yes
+        tips_if_missing: "Please sign CLA. If you have done, comment /check-cla to recheck again."
+        person: xiyuanwang
+        tips_if_added_by_others: "You can't add ascend-cla/yes label manually. Please comment /check-cla to verify it again."
+
       - label: ci-success
         tips_if_missing: "Please wait for the CI test to be completed."
         person: xiyuanwang
