--- a/applications/robot-gitee-ascend/review-trigger-new/configmap.yaml
+++ b/applications/robot-gitee-ascend/review-trigger-new/configmap.yaml
@@ -39,6 +39,7 @@ data:
     - repos:
         - modelx/MindSeed
       need_welcome: true
+      cla_label: "modelfoundry-cla/yes"
       review:
         number_of_approvers: 1
         total_number_of_approvers: 2
