--- a/applications/robot-github-openeuler/welcome/kustomization.yaml
+++ b/applications/robot-github-openeuler/welcome/kustomization.yaml
@@ -16,4 +16,4 @@ nameSuffix: -openeuler-welcome
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-github
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-github-openeuler-welcome
-  newTag: main-74f8180
+  newTag: main-8004f0
