update person of label:ci-success

--- a/applications/robot-gitee-ascend/tide/configmap.yaml
+++ b/applications/robot-gitee-ascend/tide/configmap.yaml
@@ -248,5 +248,5 @@ data:
 
       - label: ci-success
         tips_if_missing: "Please wait for the CI test to be completed."
-        person: xiyuanwang
+        person: modelfoundry-ci-bot
         tips_if_added_by_others: "You can't add ci-pipeline-passed label manually. Please remove it and wait for the CI test to be completed."
