--- a/applications/robot-gitee-mindspore/review-trigger/configmap.yaml
+++ b/applications/robot-gitee-mindspore/review-trigger/configmap.yaml
@@ -8,6 +8,7 @@ data:
     - repos:
       - mindspore/models
       need_welcome: true
+      cla_label: "mindspore-cla/yes"
       review:
         total_number_of_approvers: 2
         total_number_of_reviewers: 2
@@ -23,6 +24,7 @@ data:
     - repos:
       - mindspore/vision
       need_welcome: true
+      cla_label: "mindspore-cla/yes"
       review:
         total_number_of_approvers: 1
         total_number_of_reviewers: 2
@@ -40,6 +42,7 @@ data:
     - repos:
       - mindspore/graphlearning
       need_welcome: true
+      cla_label: "mindspore-cla/yes"
       review:
         total_number_of_approvers: 2
         total_number_of_reviewers: 2
@@ -59,6 +62,7 @@ data:
       - mindspore/mindspore
       - mindspore/community
       - mindspore/mindvision
+      cla_label: "mindspore-cla/yes"
       review:
         number_of_approvers: 1
         total_number_of_approvers: 1
@@ -72,18 +76,11 @@ data:
           - "SUCCESS"
         number_of_test_cases: 1
         label_for_ci_passed: "ci-pipeline-passed"
-      owner:
-        branch_with_owners:
-        - master
-        - r1.3
-        - r1.4
-        - r1.5
-        - r1.6
-        - r1.7
 
     - repos:
       - mindspore/course
       - mindspore/federated
+      cla_label: "mindspore-cla/yes"
       review:
         number_of_approvers: 1
         total_number_of_approvers: 1
@@ -97,12 +94,10 @@ data:
           - "SUCCESS"
         number_of_test_cases: 1
         label_for_ci_passed: "ci-pipeline-passed"
-      owner:
-        branch_with_owners:
-        - master
 
     - repos:
       - mindspore/golden-stick
+      cla_label: "mindspore-cla/yes"
       review:
         number_of_approvers: 1
         total_number_of_approvers: 1
@@ -116,13 +111,11 @@ data:
           - "SUCCESS"
         number_of_test_cases: 1
         label_for_ci_passed: "ci-pipeline-passed"
-      owner:
-        branch_with_owners:
-        - master
 
     - repos:
       - mindspore/mindpandas
       - mindspore/recommender
+      cla_label: "mindspore-cla/yes"
       review:
         number_of_approvers: 1
         total_number_of_approvers: 1
@@ -136,11 +129,6 @@ data:
           - "SUCCESS"
         number_of_test_cases: 2
         label_for_ci_passed: "ci-pipeline-passed"
-      owner:
-        branch_with_owners:
-        - master
-        - r0.1
-        - r0.1.0
 
     - repos:
       - mindspore/graphengine
@@ -158,6 +146,7 @@ data:
       - mindspore/book
       - mindspore/docs
       - mindspore/text
+      cla_label: "mindspore-cla/yes"
       review:
         number_of_approvers: 1
         total_number_of_approvers: 1
@@ -171,8 +160,6 @@ data:
           - "SUCCESS"
         number_of_test_cases: 1
         label_for_ci_passed: "ci-pipeline-passed"
-      owner:
-        branch_without_owners: ".*"
 
     - repos:
       - mindspore/ms-pipeline
@@ -181,25 +168,22 @@ data:
       - mindspore/topenterprise
       - mindspore/blog
       - mindspore/ms-operator
+      cla_label: "mindspore-cla/yes"
       review:
         number_of_approvers: 1
         total_number_of_approvers: 1
         total_number_of_reviewers: 1
       ci:
         no_ci: true
-      owner:
-        branch_without_owners: ".*"
 
     - repos:
       - mindspore/reinforcement
+      cla_label: "mindspore-cla/yes"
       review:
         number_of_approvers: 1
         total_number_of_approvers: 1
         total_number_of_reviewers: 1
       ci:
         no_ci: true
-      owner:
-        branch_with_owners:
-        - master
     commands_endpoint: "https://prow.osinfra.cn/gitee-deck/command-help?repo="
     doc: "You can get details about the review process of pull-request at [**here**](https://github.com/opensourceways/test-infra/blob/sync-5-22/prow/gitee-plugins/review-trigger/review.md)"
