--- a/applications/xihe-new/kustomization.yaml
+++ b/applications/xihe-new/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
 - finetune
 - xihe-statistics
 - async-server
+- aicc-finetune
 namespace: xihe-new
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
