--- a/applications/xihe-new/aicc-finetune/service.yaml
+++ b/applications/xihe-new/aicc-finetune/service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: xihe-aicc-finetune-service
-  namespace: xihe-test-v2
+  namespace: xihe-new
 spec:
   ports:
     - name: httpport
