--- a/applications/robot-gitee-mindspore/access/kustomization.yaml
+++ b/applications/robot-gitee-mindspore/access/kustomization.yaml
@@ -10,4 +10,4 @@ nameSuffix: -access
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee-access
-  newTag: master-295f6ee
+  newTag: v1.0.20231227171016
