--- a/applications/robot-gitee-mindspore/assign/kustomization.yaml
+++ b/applications/robot-gitee-mindspore/assign/kustomization.yaml
@@ -16,4 +16,4 @@ nameSuffix: -assign
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee-assign
-  newTag: v1.0.20231227172216
+  newTag: master-29a29f
