--- a/applications/mindspore-summary-new/mindspore-summary-deployment.yaml
+++ b/applications/mindspore-summary-new/mindspore-summary-deployment.yaml
@@ -15,9 +15,41 @@ spec:
       app: mindspore-summary
   template:
     metadata:
+      annotations:
+        vault.hashicorp.com/agent-inject: "true"
+        vault.hashicorp.com/agent-inject-perms-server.crt: "0400"
+        vault.hashicorp.com/agent-inject-perms-server.key: "0400"
+        vault.hashicorp.com/agent-inject-perms-abc.txt: "0400"
+        vault.hashicorp.com/agent-inject-perms-dhparam.pem: "0400"
+        vault.hashicorp.com/agent-run-as-user: "1000"
+        vault.hashicorp.com/agent-run-as-group: "1000"
+        vault.hashicorp.com/secret-volume-path: "/etc/nginx/cert/"
+        vault.hashicorp.com/agent-inject-secret-server.crt: "internal/data/mindspore/mindspore-summary"
+        vault.hashicorp.com/agent-inject-template-server.crt: |
+          {{- with secret "internal/data/mindspore/mindspore-summary" -}}
+          {{ .Data.data.ServerCrt }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-server.key: "internal/data/mindspore/mindspore-summary"
+        vault.hashicorp.com/agent-inject-template-server.key: |
+          {{- with secret "internal/data/mindspore/mindspore-summary" -}}
+          {{ .Data.data.ServerKey }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-abc.txt: "internal/data/mindspore/mindspore-summary"
+        vault.hashicorp.com/agent-inject-template-abc.txt: |
+          {{- with secret "internal/data/mindspore/mindspore-summary" -}}
+          {{ .Data.data.certificatePassword }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-dhparam.pem: "internal/data/mindspore/mindspore-summary"
+        vault.hashicorp.com/agent-inject-template-dhparam.pem: |
+          {{- with secret "internal/data/mindspore/mindspore-summary" -}}
+          {{ .Data.data.dhparamPem }}
+          {{- end }}
+        vault.hashicorp.com/agent-pre-populate-only: "true"
+        vault.hashicorp.com/role: mindspore-summary
       labels:
         app: mindspore-summary
     spec:
+      serviceAccount: mindspore-summary
       imagePullSecrets:
       - name: huawei-swr-image-pull-secret
       containers:
