--- a/applications/robot-gitee-mindspore/cla/kustomization.yaml
+++ b/applications/robot-gitee-mindspore/cla/kustomization.yaml
@@ -16,4 +16,4 @@ nameSuffix: -cla
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee-cla
-  newTag: master-8e10f2a
+  newTag: master-2a0365
