--- a/applications/robot-gitee-mindspore/hook-delivery/kustomization.yaml
+++ b/applications/robot-gitee-mindspore/hook-delivery/kustomization.yaml
@@ -11,4 +11,4 @@ nameSuffix: -hook-delivery
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee-hook-delivery
-  newTag: master-b1d6e59
+  newTag: master-c7ca93
