--- a/applications/robot-gitee-mindspore/lifecycle/kustomization.yaml
+++ b/applications/robot-gitee-mindspore/lifecycle/kustomization.yaml
@@ -16,4 +16,4 @@ nameSuffix: -lifecycle
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee-lifecycle
-  newTag: master-7719862
+  newTag: master-089feb
