--- a/applications/robot-gitee-mindspore/review-trigger-new/kustomization.yaml
+++ b/applications/robot-gitee-mindspore/review-trigger-new/kustomization.yaml
@@ -16,4 +16,4 @@ nameSuffix: -review-trigger-new
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee-review-trigger
-  newTag: mindspore-aaaa57e
+  newTag: mindspore-a27061
