--- a/applications/robot-github/sync-agent/kustomization.yaml
+++ b/applications/robot-github/sync-agent/kustomization.yaml
@@ -13,3 +13,6 @@ images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/sync-agent
   newTag: main-4bdc2bd
+- name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-github
+  newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/sync-agent
+  newTag: main-833649
