--- a/applications/robot-github/sync-agent/kustomization.yaml
+++ b/applications/robot-github/sync-agent/kustomization.yaml
@@ -12,7 +12,7 @@ nameSuffix: -sync-agent
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/sync-agent
-  newTag: main-4bdc2bd
+  newTag: main-833649
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-github
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/sync-agent
   newTag: main-833649
