--- a/applications/robot-github/synchronizer/kustomization.yaml
+++ b/applications/robot-github/synchronizer/kustomization.yaml
@@ -10,7 +10,7 @@ nameSuffix: -synchronizer
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-github-synchronizer
-  newTag: main-8468835
+  newTag: main-c75d56
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-github
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-github-synchronizer
   newTag: main-c75d56
