--- a/applications/robot-github/hook-delivery/secrets.yaml
+++ b/applications/robot-github/hook-delivery/secrets.yaml
@@ -8,3 +8,9 @@ spec:
     webhook-hmac:
       path: secrets/data/mindspore/robot-github
       key: webhook-hmac
+    KAFKA_ADDRESS:
+      path: secrets/data/mindspore/robot-github
+      key: KAFKA_ADDRESS
+    HMAC:
+      path: secrets/data/mindspore/robot-github
+      key: HMAC
