--- a/applications/robot-github/hook-delivery/configmap.yaml
+++ b/applications/robot-github/hook-delivery/configmap.yaml
@@ -4,8 +4,9 @@ metadata:
   name: configmap
 data:
   config.yaml: |
-    config:
-      addresses:
-      - 121.36.22.144:9094
-      - 124.70.16.28:9094
-      - 119.3.250.251:9094
+    topic: github-webhook-openeuler
+    user_agent: github-webhook-openeuler
+    kafka:
+      address: "${KAFKA_ADDRESS}"
+      version: 2.3.0
+    hmac: "${HMAC}"
