--- a/applications/robot-github/hook-dispatcher/configmap.yaml
+++ b/applications/robot-github/hook-dispatcher/configmap.yaml
@@ -5,11 +5,7 @@ metadata:
 data:
   config.yaml: |
     access:
-      broker:
-        addresses:
-        - 121.36.22.144:9094
-        - 124.70.16.28:9094
-        - 119.3.250.251:9094
+      broker: 121.36.22.144:9094,124.70.16.28:9094,119.3.250.251:9094
       repo_plugins:
         xwz123/repo-test:
         - robot-github-openlookeng-synchronizer
