add repo akg in access

--- a/applications/robot-gitee/access/configmap.yaml
+++ b/applications/robot-gitee/access/configmap.yaml
@@ -246,6 +246,9 @@ data:
         mindspore/mindarmour:
         - robot-gitee-mindspore-review-trigger
 
+        mindspore/akg:
+        - robot-gitee-mindspore-review-trigger
+
         ms-incubator:
         - robot-gitee-mindspore-cla
         
