update robot-github-openeuler token

--- a/applications/robot-github-openeuler/secrets.yaml
+++ b/applications/robot-github-openeuler/secrets.yaml
@@ -17,3 +17,15 @@ spec:
     robot-token-gitee:
       path: secrets/data/mindspore/robot-gitee
       key: robot-token
+
+---
+apiVersion: secrets-manager.tuenti.io/v1alpha1
+kind: SecretDefinition
+metadata:
+  name: secret-robot-openeuler-token
+spec:
+  name: secret-robot-openeuler-token
+  keysMap:
+    robot-openeuler-token:
+      path: secrets/data/mindspore/robot-gitee
+      key: robot-openeuler-token
