--- a/applications/robot-github-openeuler/repo-watcher/deployment.yaml
+++ b/applications/robot-github-openeuler/repo-watcher/deployment.yaml
@@ -11,6 +11,7 @@ spec:
       - name: name
         args:
         - --github-token-path=/app/conf/robot-github/robot_token
+        - --gitee-token-path=/app/conf/robot-gitee/robot_token
         - --config-file=/app/conf/robot-github/app_config/config.yaml
         image: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-github:latest
         imagePullPolicy: IfNotPresent
@@ -18,6 +19,9 @@ spec:
         - mountPath: /app/conf/robot-github/robot_token
           subPath: robot-token
           name: secret-volume
+        - mountPath: /app/conf/robot-gitee/robot_token
+          subPath: robot-openeuler-token
+          name: secret-token
         - mountPath: /app/conf/robot-github/app_config/
           name: app-config
           readOnly: true
@@ -25,6 +29,9 @@ spec:
       - name: secret-volume
         secret:
           secretName: secret-robot-token
+      - name: secret-token
+        secret:
+          secretName: secret-robot-openeuler-token
       - name: app-config
         configMap:
           name: config
