--- a/applications/robot-gitee-openlookeng/sweepstakes/kustomization.yaml
+++ b/applications/robot-gitee-openlookeng/sweepstakes/kustomization.yaml
@@ -16,4 +16,4 @@ nameSuffix: -sweepstakes
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/robot/robot-gitee-sweepstakes
-  newTag: master-663a5a9
+  newTag: master-a838c7
