--- a/applications/mindspore-meetingserver/cronjob.yaml
+++ b/applications/mindspore-meetingserver/cronjob.yaml
@@ -14,8 +14,10 @@ spec:
           annotations:
             vault.hashicorp.com/agent-inject: 'true'
             vault.hashicorp.com/role: 'mindspore-meeting-v2'
-            vault.hashicorp.com/agent-inject-perms-secrets.yaml: "0600"
-            vault.hashicorp.com/agent-inject-perms-ca.pem: "0600"
+            vault.hashicorp.com/agent-inject-perms-secrets.yaml: "0400"
+            vault.hashicorp.com/agent-inject-perms-ca.pem: "0400"
+            vault.hashicorp.com/agent-inject-perms-server.crt: "0400"
+            vault.hashicorp.com/agent-inject-perms-server.key: "0400"
             vault.hashicorp.com/agent-run-as-user: "1000"
             vault.hashicorp.com/agent-inject-secret-secrets.yaml: 'internal/data/mindspore/mindspore-meeting-v2'
             vault.hashicorp.com/agent-pre-populate-only: "true"
@@ -28,6 +30,16 @@ spec:
               {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
               {{ .Data.data.MysqlCA }}
               {{- end }}
+            vault.hashicorp.com/agent-inject-secret-server.crt: 'internal/data/mindspore/mindspore-meeting-v2'
+            vault.hashicorp.com/agent-inject-template-server.crt: |  
+              {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
+              {{ .Data.data.servercrt }}
+              {{- end }}
+            vault.hashicorp.com/agent-inject-secret-server.key: 'internal/data/mindspore/mindspore-meeting-v2'
+            vault.hashicorp.com/agent-inject-template-server.key: |  
+              {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
+              {{ .Data.data.serverkey }}
+              {{- end }}
         spec:
           serviceAccountName: mindspore-meeting
           imagePullSecrets:
@@ -35,7 +47,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: meeting-server
-              image: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/openeuler/meetingserver:master-6148c8
+              image: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-meeting-server:master-305626
               env:
               - name: TZ
                 value: Asia/Shanghai
@@ -43,6 +55,10 @@ spec:
                 value: /vault/secrets/secrets.yaml
               - name: MYSQL_TLS_PEM_PATH
                 value: /vault/secrets/ca.pem
+              - name: TLS_CRT_PATH
+                value: /vault/secrets/server.crt
+              - name: TLS_KEY_PATH
+                value: /vault/secrets/server.key
               command:
                 - /bin/sh
                 - -c
@@ -66,8 +82,10 @@ spec:
           annotations:
             vault.hashicorp.com/agent-inject: 'true'
             vault.hashicorp.com/role: 'mindspore-meeting-v2'
-            vault.hashicorp.com/agent-inject-perms-secrets.yaml: "0600"
-            vault.hashicorp.com/agent-inject-perms-ca.pem: "0600"
+            vault.hashicorp.com/agent-inject-perms-secrets.yaml: "0400"
+            vault.hashicorp.com/agent-inject-perms-ca.pem: "0400"
+            vault.hashicorp.com/agent-inject-perms-server.crt: "0400"
+            vault.hashicorp.com/agent-inject-perms-server.key: "0400"
             vault.hashicorp.com/agent-run-as-user: "1000"
             vault.hashicorp.com/agent-inject-secret-secrets.yaml: 'internal/data/mindspore/mindspore-meeting-v2'
             vault.hashicorp.com/agent-pre-populate-only: "true"
@@ -80,6 +98,16 @@ spec:
               {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
               {{ .Data.data.MysqlCA }}
               {{- end }}
+            vault.hashicorp.com/agent-inject-secret-server.crt: 'internal/data/mindspore/mindspore-meeting-v2'
+            vault.hashicorp.com/agent-inject-template-server.crt: |  
+              {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
+              {{ .Data.data.servercrt }}
+              {{- end }}
+            vault.hashicorp.com/agent-inject-secret-server.key: 'internal/data/mindspore/mindspore-meeting-v2'
+            vault.hashicorp.com/agent-inject-template-server.key: |  
+              {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
+              {{ .Data.data.serverkey }}
+              {{- end }}
         spec:
           serviceAccountName: mindspore-meeting
           imagePullSecrets:
@@ -87,7 +115,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: meeting-server
-              image: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/openeuler/meetingserver:master-6148c8
+              image: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-meeting-server:master-305626
               env:
               - name: TZ
                 value: Asia/Shanghai
@@ -95,6 +123,10 @@ spec:
                 value: /vault/secrets/secrets.yaml
               - name: MYSQL_TLS_PEM_PATH
                 value: /vault/secrets/ca.pem
+              - name: TLS_CRT_PATH
+                value: /vault/secrets/server.crt
+              - name: TLS_KEY_PATH
+                value: /vault/secrets/server.key
               command:
                 - /bin/sh
                 - -c
@@ -118,8 +150,10 @@ spec:
           annotations:
             vault.hashicorp.com/agent-inject: 'true'
             vault.hashicorp.com/role: 'mindspore-meeting-v2'
-            vault.hashicorp.com/agent-inject-perms-secrets.yaml: "0600"
-            vault.hashicorp.com/agent-inject-perms-ca.pem: "0600"
+            vault.hashicorp.com/agent-inject-perms-secrets.yaml: "0400"
+            vault.hashicorp.com/agent-inject-perms-ca.pem: "0400"
+            vault.hashicorp.com/agent-inject-perms-server.crt: "0400"
+            vault.hashicorp.com/agent-inject-perms-server.key: "0400"
             vault.hashicorp.com/agent-run-as-user: "1000"
             vault.hashicorp.com/agent-inject-secret-secrets.yaml: 'internal/data/mindspore/mindspore-meeting-v2'
             vault.hashicorp.com/agent-pre-populate-only: "true"
@@ -132,6 +166,16 @@ spec:
               {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
               {{ .Data.data.MysqlCA }}
               {{- end }}
+            vault.hashicorp.com/agent-inject-secret-server.crt: 'internal/data/mindspore/mindspore-meeting-v2'
+            vault.hashicorp.com/agent-inject-template-server.crt: |  
+              {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
+              {{ .Data.data.servercrt }}
+              {{- end }}
+            vault.hashicorp.com/agent-inject-secret-server.key: 'internal/data/mindspore/mindspore-meeting-v2'
+            vault.hashicorp.com/agent-inject-template-server.key: |  
+              {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
+              {{ .Data.data.serverkey }}
+              {{- end }}
         spec:
           serviceAccountName: mindspore-meeting
           imagePullSecrets:
@@ -139,7 +183,7 @@ spec:
           restartPolicy: Never
           containers:
           - name: meeting-server
-            image: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/openeuler/meetingserver:master-6148c8
+            image: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-meeting-server:master-305626
             env:
             - name: TZ
               value: Asia/Shanghai
@@ -147,6 +191,10 @@ spec:
               value: /vault/secrets/secrets.yaml
             - name: MYSQL_TLS_PEM_PATH
               value: /vault/secrets/ca.pem
+            - name: TLS_CRT_PATH
+              value: /vault/secrets/server.crt
+            - name: TLS_KEY_PATH
+              value: /vault/secrets/server.key
             command:
               - /bin/sh
               - -c
@@ -170,8 +218,10 @@ spec:
           annotations:
             vault.hashicorp.com/agent-inject: 'true'
             vault.hashicorp.com/role: 'mindspore-meeting-v2'
-            vault.hashicorp.com/agent-inject-perms-secrets.yaml: "0600"
-            vault.hashicorp.com/agent-inject-perms-ca.pem: "0600"
+            vault.hashicorp.com/agent-inject-perms-secrets.yaml: "0400"
+            vault.hashicorp.com/agent-inject-perms-ca.pem: "0400"
+            vault.hashicorp.com/agent-inject-perms-server.crt: "0400"
+            vault.hashicorp.com/agent-inject-perms-server.key: "0400"
             vault.hashicorp.com/agent-run-as-user: "1000"
             vault.hashicorp.com/agent-inject-secret-secrets.yaml: 'internal/data/mindspore/mindspore-meeting-v2'
             vault.hashicorp.com/agent-pre-populate-only: "true"
@@ -184,6 +234,16 @@ spec:
               {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
               {{ .Data.data.MysqlCA }}
               {{- end }}
+            vault.hashicorp.com/agent-inject-secret-server.crt: 'internal/data/mindspore/mindspore-meeting-v2'
+            vault.hashicorp.com/agent-inject-template-server.crt: |  
+              {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
+              {{ .Data.data.servercrt }}
+              {{- end }}
+            vault.hashicorp.com/agent-inject-secret-server.key: 'internal/data/mindspore/mindspore-meeting-v2'
+            vault.hashicorp.com/agent-inject-template-server.key: |  
+              {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
+              {{ .Data.data.serverkey }}
+              {{- end }}
         spec:
           serviceAccountName: mindspore-meeting
           imagePullSecrets:
@@ -191,7 +251,7 @@ spec:
           restartPolicy: Never
           containers:
           - name: meeting-server
-            image: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/openeuler/meetingserver:master-6148c8
+            image: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-meeting-server:master-305626
             env:
             - name: TZ
               value: Asia/Shanghai
@@ -199,6 +259,10 @@ spec:
               value: /vault/secrets/secrets.yaml
             - name: MYSQL_TLS_PEM_PATH
               value: /vault/secrets/ca.pem
+            - name: TLS_CRT_PATH
+              value: /vault/secrets/server.crt
+            - name: TLS_KEY_PATH
+              value: /vault/secrets/server.key
             command:
               - /bin/sh
               - -c
@@ -222,8 +286,10 @@ spec:
           annotations:
             vault.hashicorp.com/agent-inject: 'true'
             vault.hashicorp.com/role: 'mindspore-meeting-v2'
-            vault.hashicorp.com/agent-inject-perms-secrets.yaml: "0600"
-            vault.hashicorp.com/agent-inject-perms-ca.pem: "0600"
+            vault.hashicorp.com/agent-inject-perms-secrets.yaml: "0400"
+            vault.hashicorp.com/agent-inject-perms-ca.pem: "0400"
+            vault.hashicorp.com/agent-inject-perms-server.crt: "0400"
+            vault.hashicorp.com/agent-inject-perms-server.key: "0400"
             vault.hashicorp.com/agent-run-as-user: "1000"
             vault.hashicorp.com/agent-inject-secret-secrets.yaml: 'internal/data/mindspore/mindspore-meeting-v2'
             vault.hashicorp.com/agent-pre-populate-only: "true"
@@ -236,6 +302,16 @@ spec:
               {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
               {{ .Data.data.MysqlCA }}
               {{- end }}
+            vault.hashicorp.com/agent-inject-secret-server.crt: 'internal/data/mindspore/mindspore-meeting-v2'
+            vault.hashicorp.com/agent-inject-template-server.crt: |  
+              {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
+              {{ .Data.data.servercrt }}
+              {{- end }}
+            vault.hashicorp.com/agent-inject-secret-server.key: 'internal/data/mindspore/mindspore-meeting-v2'
+            vault.hashicorp.com/agent-inject-template-server.key: |  
+              {{- with secret "internal/data/mindspore/mindspore-meeting-v2" -}}  
+              {{ .Data.data.serverkey }}
+              {{- end }}
         spec:
           serviceAccountName: mindspore-meeting
           imagePullSecrets:
@@ -243,7 +319,7 @@ spec:
           restartPolicy: Never
           containers:
           - name: meeting-server
-            image: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/openeuler/meetingserver:master-6148c8
+            image: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-meeting-server:master-305626
             env:
             - name: TZ
               value: Asia/Shanghai
@@ -251,6 +327,10 @@ spec:
               value: /vault/secrets/secrets.yaml
             - name: MYSQL_TLS_PEM_PATH
               value: /vault/secrets/ca.pem
+            - name: TLS_CRT_PATH
+              value: /vault/secrets/server.crt
+            - name: TLS_KEY_PATH
+              value: /vault/secrets/server.key
             command:
               - /bin/sh
               - -c
