--- a/applications/mindspore-meetingserver/ingress.yaml
+++ b/applications/mindspore-meetingserver/ingress.yaml
@@ -3,18 +3,39 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
-  name: meetingserver-ingress
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+  name: api-ingress
   namespace: mindspore-meetingserver
 spec:
-  rules:
-  - host: meetings-mindspore.test.osinfra.cn
-    http:
-      paths:
-      - backend:
-          serviceName: meeting-service
-          servicePort: 8080
-        path: /        
   tls:
-  - hosts:
-    - meetings-mindspore.test.osinfra.cn
-    secretName: meetingserver-tls
+    - hosts:
+        - api.mindspore.cn
+      secretName: api-mindspore-tls
+  rules:
+    - host: api.mindspore.cn
+      http:
+        paths:
+        - backend:
+            serviceName: meeting-service
+            servicePort: 8080
+          path: /meetings(/|$)(.*)
+
+---
+apiVersion: secrets-manager.tuenti.io/v1alpha1
+kind: SecretDefinition
+metadata:
+  name: api-mindspore-tls
+  namespace: mindspore-meetingserver
+spec:
+  name: api-mindspore-tls
+  keysMap:
+    ca.crt:
+      path: secrets/data/mindspore/mindspore-cn-tls
+      key: ca.cert
+    tls.crt:
+      path: secrets/data/mindspore/mindspore-cn-tls
+      key: ca.cert
+    tls.key:
+      path: secrets/data/mindspore/mindspore-cn-tls
+      key: ca.key
