add config:access of mindspore/community

--- a/applications/robot-gitee/access/configmap.yaml
+++ b/applications/robot-gitee/access/configmap.yaml
@@ -248,6 +248,9 @@ data:
 
         mindspore/akg:
         - robot-gitee-mindspore-review-trigger
+    
+        mindspore/community:
+        - robot-gitee-mindspore-review-trigger
 
         ms-incubator:
         - robot-gitee-mindspore-cla
