--- a/applications/robot-gitee-ascend/tide/configmap.yaml
+++ b/applications/robot-gitee-ascend/tide/configmap.yaml
@@ -231,6 +231,7 @@ data:
       - modelx/MindSeed
       - modelx/infra
       - modelx/docs
+      - modelx/modelfoundry_hub
       merge_method: squash
       labels:
       - label: lgtm
